src/main/java/com/example/jats/error/ErrorResponse.java
package com.example.jats.error;

import lombok.AllArgsConstructor;
import lombok.Getter;
import lombok.NoArgsConstructor;

@Getter
@AllArgsConstructor
public class ErrorResponse {

    private final int status;

    private final String message;
}
